readme para twitter clone

--- a/twitter-clone/.env
+++ b/twitter-clone/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://julioandres:password@localhost/tweeter_clone
+DATABASE_URL=postgres://usuario:password@localhost/tweeter_clone
